--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -82,6 +82,10 @@
     font-size: 18px;
 }
 
+.b-b-3px-c-principal {
+    border-bottom: 3px solid var(--color-principal)!important;
+}
+
 .b-b-3px-c-secundario {
     border-bottom: 3px solid var(--color-quinto)!important;
 }
@@ -452,20 +456,16 @@ nav.navbar a {
 }
 
 .carousel-caption {
-    top: 0;
+    /* top: 0;
     bottom: 0;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .carousel-caption * {
     color: #fff!important;
-}
-
-.subInformacion {
-    position: absolute;
-    bottom: 300px;
 }
 
 .subInformacion button {
@@ -479,9 +479,27 @@ nav.navbar a {
     margin-bottom: 150px;
 }
 
+.icono-informacion-seccion {
+    width: 50px;
+    height: 50px;
+}
 
-.contenedor.seccion {
-    margin-top: 450px;
+.titulo-descriptivo {
+    background-color: var(--color-principal);
+    color: #fff;
+    font-style: italic;
+    font-weight: 500;
+    padding: 15px;
+}
+
+.subtitulos {
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.iconos-nosotros img {
+    width: 300px;
 }
 
 /* 
