--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -494,7 +494,7 @@ nav.navbar a {
 }
 
 footer h4 span {
-    color: var(--color-secundario)!important;
+    color: var(--color-cuarto)!important;
 }
 
 /* 
