--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -286,3 +286,13 @@ h2::after {
     border-color: var(--color-principal)!important;
     box-shadow: none!important;
 }
+
+.btn-contacto {
+    color: #fff!important;
+    padding: 20px;
+    font-size: 19px;
+}
+
+.btn-contacto:hover {
+    color: #fff!important; 
+}
