--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -30,6 +30,13 @@ a:hover {
 	border-bottom: 2px solid var(--color-principal);
 }
 
+.titulo-seccion {
+    font-weight: bold;
+    font-size: 20px;
+    text-align: justify;
+    font-style: italic;
+}
+
 .titulo-principal {
     width: max-content;
     color: var(--color-principal)!important;
@@ -209,6 +216,14 @@ h2::after {
     z-index: 3!important;
 }
 
+.z-index-5 {
+    z-index: 5!important;
+}
+
+.z-index-10 {
+    z-index: 10!important;
+}
+
 .mb-10 {
     margin-bottom: 8rem;
 }
@@ -295,4 +310,21 @@ h2::after {
 
 .btn-contacto:hover {
     color: #fff!important; 
+}
+
+.imagen-fondo {
+    width: 100%;
+    height: 450px;
+    background-image: url(../img/alberca_tres.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.sombra-seccion {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0, 0.5);
 }
