--- a/css/root.css
+++ b/css/root.css
@@ -8,3 +8,9 @@
     --rgb-color-principal:rgb(0 136 170 / 50%);
     --gradiente: linear-gradient(to left, var(--color-secundario), var(--color-principal));
 }
+
+/* Fuentes personalizadas */
+@font-face {
+    font-family: "aquajade";
+    src: url(../fonts/aquajade/AquajadeFree-Regular.otf);
+}
