--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -476,6 +476,7 @@ nav.navbar a {
     text-align: center;
     font-weight: bold;
     font-style: italic;
+    font-family: Reforma1918-BlancaItalica;
 }
 
 .iconos-nosotros img {
