--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -551,6 +551,10 @@ footer h4 span {
         padding: 14px!important;
     }
 
+    .titulo-principal {
+        font-size: 40px!important;
+    }
+
 }
 
 @media (max-width:350px) {
