--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -542,7 +542,6 @@ footer h4 span {
 
 }
 
-
 @media (max-width:340px) {
 
     .swiper-slide-active img {
@@ -569,6 +568,18 @@ footer h4 span {
 
 }
 
+@media (max-width:375px) {
+
+    .subInformacion {
+        padding: 0px!important;
+    }
+
+    .subInformacion div, .carousel-caption h1 {
+        font-size: 15px;
+    }
+
+}
+
 @media (max-width:424px) {
 
     .titulo-seccion {
@@ -589,18 +600,6 @@ footer h4 span {
 
     .titulo-header p {
         font-size: 55px!important;
-    }
-
-}
-
-@media (max-width:375px) {
-
-    .subInformacion {
-        padding: 0px!important;
-    }
-
-    .subInformacion div, .carousel-caption h1 {
-        font-size: 15px;
     }
 
 }
@@ -678,6 +677,14 @@ footer h4 span {
 
     .tituloPrincipal {
         font-size: 40px!important;
+    }
+
+}
+
+@media (min-width:1058px) {
+
+    .seccion-informacion-header {
+        width: 80%;
     }
 
 }
