--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -244,6 +244,10 @@ h2::after {
     box-shadow: 0px 8px 18px 1px var(--rgb-color-principal)!important;
 }
 
+.box-shadow-carousel {
+    box-shadow: -7px 10px 17px -3px rgb(0 0 0 / 50%);
+}
+
 /* Font size */
 
 .font-size-15px {
@@ -274,6 +278,10 @@ h2::after {
     background-color: var(--color-secundario)!important;
     border-color: var(--color-secundario)!important;
     color: #fff!important;
+}
+
+.lista-numerica li {
+    list-style: decimal!important;
 }
 
 /* Padding */
