Se agregó tabla correspondiente a los lugares que asisten con los servicios.

--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -45,6 +45,14 @@ thead th {
     color: #fff!important;
 }
 
+tfoot {
+    background: #999999;
+    color: #fff;
+    font-weight: bold;
+    font-style: italic;
+}
+
+
 .table-asistimos tr {
     font-weight: bold;
     text-align: center;
