--- a/css/carousel.css
+++ b/css/carousel.css
@@ -63,7 +63,7 @@
   height: 0px!important;
 }
 
-.carousel-item::after {
+/* .carousel-item::after {
   content: "";
   position: absolute;
   left: 0;
@@ -71,7 +71,7 @@
   top: 0;
   bottom: 0;
   background-color: rgb(0, 0, 0, 0.5);
-}
+} */
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
   height: 50px;
