--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -1,7 +1,5 @@
 /* ////////////////////////////////////////////////////////////////////////////// */
-
 /* Estilos específicos */
-
 .irAbajo, .irArriba {
     width: 60px;
     height: 60px;
@@ -117,6 +115,10 @@ nav.navbar a {
     color: #fff!important;
     font-size: 16px;
     font-weight: bold;
+}
+
+#navegacion-principal {
+    text-align: center;
 }
 
 .logo {
