--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -283,6 +283,10 @@ h2::after {
     margin-bottom: 8rem;
 }
 
+.mb-0px {
+    margin-bottom: 0px!important;
+}
+
 .mb-150 {
     margin-bottom: 150px!important;
 }
