--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,7 @@ div.mapa {
 /** Contacto Home **/
 
 .imagen-contacto {
-    background-image: url(../img/alberca_tres.jpg);
+    background-image: url(../img/albercas_del_mar_imagen6.jpg);
     background-position: center center;
     background-size: cover;
     height: 40rem;
