--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -108,6 +108,7 @@
 
 nav.navbar {
     width: 100%;
+    height: 100%;
     background-color: var(--color-secundario)!important;
     padding: 0px 0px;
     z-index: 1000;
@@ -579,7 +580,14 @@ footer h4 span {
     border-radius: 50px;
 }
 
+.altura-reducida-menu {
+    height: 120px!important;
+}
 
+.tamanio-reducido-logo {
+    width: 90px!important;
+    height: 90px!important;
+}
 
 /* 
     *
