--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -596,6 +596,14 @@ h2::after {
     background-color: rgb(0,0,0,0.7);
 }
 
+.navbar-toggler {
+    background-color: rgb(106 105 105)!important;
+}
+
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>")!important;
+}
+
 @keyframes girar-spinner-derecha {
     
     from {
