--- a/css/estilosPersonalizados.css
+++ b/css/estilosPersonalizados.css
@@ -597,7 +597,16 @@ h2::after {
 }
 
 .navbar-toggler {
+    width: 40px;
+    height: 40px;
     background-color: rgb(106 105 105)!important;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.navbar-toggler-icon {
+    width: 100%;
+    height: 100%;
 }
 
 .navbar-light .navbar-toggler-icon {
