--- a/css/otrosEstilosPhotoSwipe.css
+++ b/css/otrosEstilosPhotoSwipe.css
@@ -1,17 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    line-height: 20px;
     background: #eee;
-}
-
-h1 {
-    margin: 0;
-    padding: 50px 50px 30px 50px;
-    font-size: 26px;
-    line-height: 1.3;
+    font-size: initial!important;
 }
 
 .pswp-gallery__item {
