--- a/css/otrosEstilos.css
+++ b/css/otrosEstilos.css
@@ -589,6 +589,18 @@ footer h4 span {
     height: 90px!important;
 }
 
+.contenedor-img-ingenieria-civil {
+    width: 100%;
+    height: 120px;
+    background-color: rgba(144, 144, 144, 0.6);
+}
+
+.contenedor-img-ingenieria-civil img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 /* 
     *
     * --- Media querys
