--- a/css/otrosEstilosPhotoSwipe.css
+++ b/css/otrosEstilosPhotoSwipe.css
@@ -20,6 +20,13 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between!important;
+    align-items: flex-start;
+}
+
+.pswp-gallery > div {
+    margin-top: 20px;
+    box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 50%);
 }
 
 .pswp__dynamic-caption {
@@ -43,10 +50,14 @@ body {
 }
 
 img.pswp__img {
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: contain;
 }
+
+/* .pswp__img {
+    width: auto!important;
+} */
 
 img {
     min-width: initial!important;
