--- a/css/otrosEstilosPhotoSwipe.css
+++ b/css/otrosEstilosPhotoSwipe.css
@@ -20,7 +20,7 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between!important;
+    justify-content: space-between;
     align-items: flex-start;
 }
 
