--- a/css/otrosEstilosPhotoSwipe.css
+++ b/css/otrosEstilosPhotoSwipe.css
@@ -7,6 +7,9 @@ body {
 
 .pswp-gallery__item {
     margin: 0 4px 4px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pswp-gallery__item img {
@@ -14,7 +17,6 @@ body {
 }
 
 .pswp-gallery {
-    max-width: 650px;
     padding: 0 50px 50px;
     background: #eee;
     position: relative;
@@ -27,6 +29,12 @@ body {
 .pswp-gallery > div {
     margin-top: 20px;
     box-shadow: 0px 0px 5px 1px rgb(0 0 0 / 50%);
+}
+
+.pswp-gallery .pswp-gallery__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pswp__dynamic-caption {
@@ -73,4 +81,8 @@ img {
 .pswp__dynamic-caption {
     top: 0!important;
     margin-top: 0px!important;
+}
+
+.pswp--ui-visible > .pswp__dynamic-caption {
+    display: none!important;
 }
