--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,10 +1,10 @@
 .carousel-caption {
-    min-height: 100%;
-    display: flex!important;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: center;
-    z-index: 1;
+  min-height: 100%;
+  display: flex !important;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+  z-index: 1;
 }
 
 .carousel-caption h1 {
@@ -12,13 +12,19 @@
 }
 
 .carousel-caption * {
-  text-transform: uppercase;
   width: 100%;
+  text-transform: uppercase;
+  color: #fff !important;
 }
 
-/* .carousel-caption > * {
-  background: #05497066;
-} */
+.carousel-inner ul li {
+  font-size: 25px;
+}
+
+.carousel-caption>div {
+  min-width: 90%;
+  max-width: 90%;
+}
 
 .subInformacion * {
   font-size: 25px;
@@ -26,10 +32,10 @@
 }
 
 .subInformacion button {
-  width: auto!important;
+  width: auto !important;
   height: 65px;
-  background-color: var(--color-secundario)!important;
-  border-color: var(--color-secundario)!important;
+  background-color: var(--color-secundario) !important;
+  border-color: var(--color-secundario) !important;
   padding: 10px 20px;
   font-size: 25px;
   float: left;
@@ -50,7 +56,7 @@
 }
 
 .border-bottom-none {
-  border-bottom: unset!important;
+  border-bottom: unset !important;
 }
 
 .subTitulo {
@@ -60,30 +66,130 @@
 }
 
 .subTitulo::after {
-  height: 0px!important;
+  height: 0px !important;
 }
 
-/* .carousel-item::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgb(0, 0, 0, 0.5);
-} */
-
-.carousel-control-prev-icon, .carousel-control-next-icon {
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
   height: 50px;
   width: 50px;
   padding: 20px;
   background-color: var(--color-secundario);
 }
 
+#carousel-services {
+  width: 650px;
+  height: 150px;
+}
+
+#carousel-services .carousel-inner {
+  min-height: 150px;
+  max-height: 150px;
+  margin-bottom: 50px;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+#carousel-services .carousel-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#carousel-services .carousel-item p {
+  width: 70%;
+  position: absolute;
+  color: #fff;
+  font-size: 28px;
+  line-height: 30px;
+  border-bottom: 3px solid #fff;
+}
+
+#carousel-services .carousel-control-prev-icon,
+#carousel-services .carousel-control-next-icon {
+  border-radius: 50%;
+  width: 10px !important;
+  height: 10px !important;
+  padding: 14px !important;
+}
+
+@media (max-width:340px) {
+
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    width: 1px;
+    height: 1px;
+    padding: 14px !important;
+  }
+
+}
+
+@media (max-width:348px) {
+
+  .carousel-caption .titulo-principal {
+    /* font-family: 'Times New Roman', Times, serif!important; */
+    font-size: 12px;
+  }
+
+}
+
+@media (max-width:375px) {
+
+  .carousel-caption h1 {
+    font-size: 15px;
+  }
+
+}
+
+@media (max-width:600px) {
+
+  .carousel-caption>div>div {
+    line-height: 170%;
+  }
+
+  .carousel-caption .titulo-principal {
+    /* font-family: 'Times New Roman', Times, serif!important; */
+    font-size: 40px;
+  }
+
+}
+
+@media (max-width:731px) {
+
+  .carousel-caption {
+    position: relative;
+    left: 0 !important;
+    right: 0 !important;
+  }
+
+}
+
+@media (max-width:827px) {
+
+  .subInformacion div,
+  .carousel-caption h1 {
+    font-size: 30px;
+  }
+
+}
+
+@media (max-width:991.98px) {
+
+  .carousel-caption {
+    position: relative !important;
+    right: 0px !important;
+    left: 0px !important;
+  }
+
+}
+
 @media (max-width:1495px) {
 
   .carousel-inner {
-    min-height: 100%!important;
+    min-height: 100% !important;
   }
 
 }
